[package]
name = "web-utils"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/web-utils"
repository = "https://github.com/EthanJustice/web-utils"
license = "MIT"
publish = false # for now

[dependencies]
